janet-check/src/analysis/symbols/snapshots/janet_check__analysis__symbols__tests__a_signature_takes_the_types_of_the_arguments_written.snap
---
source: src/analysis/symbols/tests.rs
expression: "(defn pair {:params [a a] :ret [a a]} [left right] [left right])\n(pair 1 |)"
---
----- SOURCE CODE
(defn pair {:params [a a] :ret [a a]} [left right] [left right])
(pair 1 |)

----- SIGNATURE
(pair left: :number right: :number) -> [:number :number]
