janet-check/src/analysis/symbols/snapshots/janet_check__analysis__symbols__tests__call_at_an_argument_that_is_a_call.snap
---
source: src/analysis/symbols/tests.rs
expression: (map inc |(range 3) )
---
----- CALL
(map inc (range 3) )
 ▔▔▔     ↑
argument 1
