janet-check/src/analysis/symbols/snapshots/janet_check__analysis__symbols__tests__completes_the_keys_of_a_destructured_value.snap
---
source: src/analysis/symbols/tests.rs
expression: "show_keys(&workspace, \"/ws/people.janet\", \":tempids\")"
---
----- AT
  (def {|

----- KEYS
:tx Eid
:tempids {:string Eid}
